tests/fixtures/invalid/divmod_str_dict.py
# Cannot call divmod() with Str, Dict[str, int]
x = divmod("hello", {"a": 1})
